Added images to resources directory. Fixed a bug with path string, when process needs to be executed. Added some others parts of code, for a better visualization. Application front-end almost finished.